--- a/Java/MatrixMultiplication/pom.xml
+++ b/Java/MatrixMultiplication/pom.xml
@@ -19,5 +19,10 @@
             <artifactId>${nd4j.backend}</artifactId>
             <version>${nd4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.12</version>
+        </dependency>
     </dependencies>
 </project>
