--- a/Java/MatrixMultiplication/pom.xml
+++ b/Java/MatrixMultiplication/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>${nd4j.backend}</artifactId>
             <version>${nd4j.version}</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-cuda-8.0</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
